--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 
-<h1>Mean stack training</h1>
-<p>Will cover mean trraining</p>
+<h1>Mean stack training..</h1>
+<p>Will cover mean full stack trraining</p>
+
 
 </body>
 </html>
